# commercetools-rust-sdk

./: Cargo.toml  README.md  launch.json
src/: main.rs
src/commercetools/: apiclient.rs  cart.rs  cartdiscount.rs  category.rs  channel.rs  common.rs  cttype.rs  customer.rs  customergroup.rs  customobject.rs  discountcode.rs  error.rs  extension.rs  inventory.rs  me.rs  message.rs  mod.rs  order.rs  orderedit.rs  payment.rs  product.rs  productcttype.rs  productdiscount.rs  producttype.rs  project.rs  review.rs  shippingmethod.rs  shoppinglist.rs  state.rs  subscription.rs  taxcategory.rs  zone.rs
