[package]
name = "rust-sdk"
version = "0.1.0"
authors = ["David Weterings <david@davidweterings.nl>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.8"
serde_json = "1.0.38"
oauth2 = "1.3.0"
reqwest = "0.9.10"
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.2", features = ["serde", "v4"] }
maplit = "1.0.1"
codegen = "0.1.0"
